# eywa-mcp

./: README.md  SKILL.md  pyproject.toml  setup.sh
_workbench/: eywa-audit-report.md
eywa/: __init__.py  cli.py  config.py  detect_session.py  extract.py  retrieval.py  server.py
eywa/extractors/: extract.mjs  handoff.md
